src/test/resources/tests/typeError/badParameters.qg

 init {
    var = pow(2, true)
 }

 run true

 input(a,b) true